# dz_dj_1

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  validators.py  views.py
ads/datasets/: ads.json  convert_csv_json.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selection.py  0004_category_slug_alter_ad_description_alter_ad_name.py  0005_alter_category_slug.py
ads/serializers/: serializers_cat.py  serializers_sel.py  serislizers_ad.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py  selection.py
dz_dj_1/: asgi.py  settings.py  urls.py  wsgi.py
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: select_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_birth_date_alter_user_age_alter_user_email_and_more.py  0003_alter_location_lat_alter_location_lng.py  0003_alter_user_birth_date.py
